--- a/package.json
+++ b/package.json
@@ -2,17 +2,19 @@
   "name": "work_together",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.10.2",
     "@rails/actioncable": "^6.0.0-alpha",
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "4.3.0",
-    "bootstrap": "^5.1.1",
+    "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@webpack-cli/serve": "^1.6.0",
     "webpack-dev-server": "^4.2.1"
   }
 }
